BRP-67: Fixing breadcrumb localization in IT; CSS fix for correct breadcrumb popups z-index handling

--- a/src/viewer/viewer.css
+++ b/src/viewer/viewer.css
@@ -1,4 +1,5 @@
 .aiiif-viewer {
+    z-index: 0;
     position: relative;
     background-color: #404346;
     overflow: hidden;
